fix horizontal scroll on desktop; add useEffect hook to dynamically set document title; update About me info

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,8 +1,9 @@
 @import '../../assets/styles/_globals.scss';
 
 .app {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
   grid-template-columns: 1fr;
