--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -129,7 +129,7 @@
     grid-area: desc;
     align-self: start;
     justify-self: center;
-    text-align: right;
+    text-align: left;
   }
   .project__link {
     cursor: pointer;
